# r-random

bot/: Cargo.toml
bot/src/: main.rs
calc-rectangle-area/: Cargo.toml
calc-rectangle-area/src/: main.rs
cli-example/: Cargo.toml
cli-example/src/: main.rs
component-cli/: .gitignore  Cargo.toml
component-cli/src/: .example.config.json  main.rs
component-cli/src/resources/: button.tsx
nth-fibonacci/: README.md
nth-fibonacci/src/: main.rs  utils.rs
old-study/src/: main.rs
old-study/study-compilation/: README.md
old-study/study-compilation/examples/: if_control.rs  operations_example.rs
old-study/study-compilation/exercises/: exercise_01.rs  re_exercise_02.rs
r-clap-example/: Cargo.toml
r-clap-example/src/: example.txt  main.rs
r-study/study-compilation/exercises/: exercise_03_a.rs
r-temperature-cli/: Cargo.toml  README.md
rsec/: Cargo.toml
rsec/src/: config.rs  controls.rs  main.rs  screen.rs
rusty/src/: main.rs
study/src/: main.rs
study/study-compilation/: README.md
study/study-compilation/examples/: borrow_example.rs  enum_example.rs  example_expressions.rs  example_while.rs  generics_example.rs  hashmap_example.rs  impl_example.rs  import_example.rs  match_example2.rs  math_examples.rs  option_02_example.rs  option_example.rs  ref_example.rs  result_example.rs  slightly_advanced_match_example.rs  stdin_example.rs  str_example.rs  struct_example.rs  struct_example2.rs  tuple_example.rs  vec_exaples.rs
study/study-compilation/exercises/: exercise_02.rs  exercise_03_a.rs  exercise_03_b.rs  (+17 more)
temperature-cli/src/: main.rs
(+14 files in other folders)
